--- a/ps_zen_config.htm
+++ b/ps_zen_config.htm
@@ -101,7 +101,7 @@
             'battery': $("select[name=flipbattery]").prop('selectedIndex') ? 'on' : 'off',
             'debug':   $("select[name=flipdebug]").prop('selectedIndex')   ? 'true' : 'false',
             'wuApiKey':$("select[name=fliphourly]").prop('selectedIndex')  ? $("#text-apikey").val() : null,
-            'connectionName':$("#text-connectionName").val()
+            'connectionName':$("#text-connectionName").val(),
         };
     }
 
