--- a/ps_zen_config.htm
+++ b/ps_zen_config.htm
@@ -189,6 +189,7 @@
             {
             	return_to = "pebblejs://close#";
             }
+            return_to = decodeURIComponent(return_to);
 
             var location = return_to + encodeURIComponent(JSON.stringify(saveOptions()));
             console.log("Warping to: " + location);
