--- a/ps_zen_config.htm
+++ b/ps_zen_config.htm
@@ -193,7 +193,7 @@
             }
             else
             {
-            	location = "pebblejs://close#" + (JSON.stringify(saveOptions()));
+            	location = 'pebblejs://close#' + JSON.stringify(saveOptions());
             }
 
             console.log("Warping to: " + location);
