--- a/ps_zen_config.htm
+++ b/ps_zen_config.htm
@@ -187,11 +187,10 @@
             console.log("Submit");
             var location = "pebblejs://close#" + (JSON.stringify(saveOptions()));
             var return_to = getURLParameter('return_to');
-            if(return_to.length > 0)
+            if(return_to !== 'null')
             {
                 location = decodeURIComponent(return_to) + encodeURIComponent(JSON.stringify(saveOptions()));
             }
-
             console.log("Warping to: " + location);
             console.log(location);
             document.location = location;
