--- a/ZENSteel/index.html
+++ b/ZENSteel/index.html
@@ -1,7 +1,6 @@
-
 <html>
 <head>
-    <title>ZEN of PebbleSteel Configuration</title>
+    <title>The Zen of Pebble Steel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.css" />
@@ -15,7 +14,7 @@
 <div data-role="page" id="main">
 
     <div data-role="content" class="ui-body ui-body-a">
-		<p><strong>ZEN of PebbleSteel</strong><br>by FC STUDIO</p>
+		<p style="font-size: 1.875em; font-weight: bold;">The Zen of Pebble Steel <p style="text-align: right;">by FC STUDIO</p>
 
         <div data-role="fieldcontain" >
             <label for="text-connectionName">Connection Name:</label>
