--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>The Zen of Pebble Steel</title>
+    <title>Real Steel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.css" />
@@ -13,7 +13,7 @@
 <body>
 <div data-role="page" id="main">
     <div data-role="content" class="ui-body ui-body-a">
-		<p style="font-size: 1.5em; font-weight: bold;">The Zen of Pebble Steel <p style="text-align: right;">by FC STUDIO</p>
+		<p style="font-size: 1.5em; font-weight: bold;">Real Steel for Pebble Steel<p style="text-align: right;">by FC STUDIO</p>
         <div data-role="fieldcontain" >
             <label for="text-connectionName">Bluetooth Connection/Device Name:</label>
             <input type="text" name="text-connectionName"  id="text-connectionName" autocapitalize="off" autocorrect="off" autocomplete="off" value="My iPhone">
