--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -284,7 +284,7 @@
 			var return_to = getURLParameter('return_to');
 			if(return_to !== 'null')
 			{
-				location = decodeURIComponent(return_to) + encodeURIComponent(JSON.stringify(saveOptions()));
+				location = decodeURIComponent(return_to) + (JSON.stringify(saveOptions()));
 			}
 			console.log("Warping to: " + location);
 			console.log(location);
