--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -131,7 +131,15 @@
 
 	function getURLParameter(name)
 	{
-		return decodeURI((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]);
+	    var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+	    if (results==null)
+	    {
+	       return null;
+	    }
+	    else
+	    {
+	       return results[1] || 0;
+	    }
 	}
 
 	$().ready(function()
