--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -131,15 +131,7 @@
 
 	function getURLParameter(name)
 	{
-	    var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
-	    if (results==null)
-	    {
-	       return null;
-	    }
-	    else
-	    {
-	       return results[1];
-	    }
+		return decodeURI((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]);
 	}
 
 	$().ready(function()
