--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -129,7 +129,7 @@
 		};
 	}
 
-	function getParameterByName(name)
+	function getURLParameter(name)
 	{
 	    var url = window.location.href;
 	    name = name.replace(/[\[\]]/g, "\\$&");
