--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -97,7 +97,7 @@
 		</div>
 
 		<div data-role="fieldcontain">
-			<label for="flipDateLines">Bottom Date & Time Info:</label>
+			<label for="flipDateLines">Bottom Date and Time Info:</label>
 			<select name="flipDateLines" id="flipDateLines" data-role="slider" data-mini="true">
 				<option value="off">Off</option>
 				<option value="on">On</option>
