--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -129,10 +129,15 @@
 		};
 	}
 
-	function getURLParameter(name)
-	{
-		return decodeURI((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]);
-	}
+	function getURLParameter(name) {
+    var url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+}
 
 	$().ready(function()
 	{
