--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -131,7 +131,7 @@
 
 	function getURLParameter(name)
 	{
-	    var url = window.location.href;
+	    var url = location.search;
 	    name = name.replace(/[\[\]]/g, "\\$&");
 	    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
 	    results = regex.exec(url);
