--- a/RealSteel/index.html
+++ b/RealSteel/index.html
@@ -89,7 +89,7 @@
 		</div>
 
 		<div data-role="fieldcontain">
-			<label for="flipdebug">Weather Observation Location:</label>
+			<label for="flipdebug">Sunrise, Sunset and Weather Observation Location:</label>
 			<select name="flipdebug" id="flipdebug" data-role="slider" data-mini="true">
 				<option value="off">Off</option>
 				<option value="on">On</option>
